xx/xx/2011 - MythBox 1.0.2
-----------------------------
  New
    - Issue 148 - Dutch translations (tnx Fred van Zwieten)
    
  Fixed
    - Issue 147 - Changes to the recording schedule do not take effect immediately

1/13/2011 - MythBox 1.0.1
-----------------------------
  New
    - Issue 132 - Support for MythTV 0.24 except for LiveTV (thx mitch capper)
    - TVRage season and episode matching now uses the program's subtitle when the original air date search fails
    - Added Episode column to the recordings screen
    - TV Guide shows upcoming recordings in a different color
    - Readme and FAQ viewable from MythBox > Settings > Readme and FAQ
    - Czech translations (tnx Pavel Mlčoch)
    - Swedish translations (tnx Magnus Gustafsson)
    - Polish translations (tnx Michał Sawicz)
        
  Fixed
    - Issue 136 - mythbox.log moved to standard log dir on Mac OSX
    - Issue 141 - settings.xml parsing failed when removing mythboxfeed
    - Issue 142 - could not save new recording schedules that contained unicode chars
    - TVRage metadata with missing seasons caused lookup failures 
    - Resuming from last position now works for ad-hoc recordings
    - Thumbnail generation for 0.24 backends fixed
    - Changing sort order or hitting refresh on some windows didn't re-invoke inflight rendering threads 
    
11/25/2010 - MythBox 1.0.0
-----------------------------
  New
    - Issue 125 - Added Frech translations (thanks ddekani)
    - TVRage metadata caching for Season & Episode
    - FFMpeg binary for Mac and Windows unbundled from installation zip and also removed from Settings screen. Now downloads on demand.
    - New icon (tnx freezy)
    - Added to XBMC addon repo for easy updates
   
  Fixed
    - Issue 124 - Fixed parsing another variation of ffmpeg output
    - Issue 130 - Unable to play a recording when the cache lookup for a thumbnail fails
    - Issue 131 - Hours in timestamps are not displayed correctly on Macs