@@ -4,8 +4,10 @@ xx/xx/2011 - MythBox 1.0.2
     - Issue 148 - Dutch translations (tnx Fred van Zwieten)
     
   Fixed
+    - Issue 145 - Fixed unicode error in Live TV window 
     - Issue 147 - Changes to the recording schedule do not take effect immediately
-
+    - Issue 149 - Help text on Settings screen gets truncated based on the translation
+    
 1/13/2011 - MythBox 1.0.1
 -----------------------------
   New
